Fixed overflowing issue in mobile

--- a/app/Navbar.module.scss
+++ b/app/Navbar.module.scss
@@ -13,3 +13,6 @@ $color-mode-type: data;
     background-color: $light_background;
   }
 }
+.coloredNavbar {
+  height: 4.5rem !important;
+}
